--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
+    "method-override": "^3.0.0",
     "nodemon": "^3.1.9",
     "path": "^0.12.7",
     "uuid": "^11.1.0"
