--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "method-override": "^3.0.0",
+    "mysql2": "^3.14.0",
     "nodemon": "^3.1.9",
     "path": "^0.12.7",
     "uuid": "^11.1.0"
